Fix tooltip text alignment

--- a/src/Tooltip.module.css
+++ b/src/Tooltip.module.css
@@ -12,6 +12,7 @@
   z-index: 1;
   left: 50%;
   transform: translateX(-50%);
+  text-align: center;
 }
 
 .tooltip.top {
